--- a/src/main/webapp/agente/add-agente.xhtml
+++ b/src/main/webapp/agente/add-agente.xhtml
@@ -1,15 +1,15 @@
-<!-- saveCamion.xhtml -->
+<!-- saveAgente.xhtml -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>Guardar Camión</title>
+    <title>Guardar Agente</title>
 </h:head>
 <h:body>
-    <h:form>
-        <h1>Registrar Nuevo Camión</h1>
+    <h:form id="addForm" enctype="multipart/form-data">
+        <h1>Registrar Nuevo Agente</h1>
 
         <p:messages autoUpdate="true" />
 
@@ -32,10 +32,9 @@
             </p:selectOneMenu>
 
             <h:outputLabel for="photo" value="Foto:" />
-            <p:inputText id="photo" value="#{agenteController.agente.photo}" required="true" />
-
-            <h:outputLabel for="filename" value="Nombre Foto:" />
-            <p:inputText id="filename" value="#{agenteController.agente.filename}" required="true" />
+            <p:fileUpload id="photo" mode="simple" listener="#{agenteController.handleUpload}"
+                          fileLimit="1" auto="true" allowTypes="/(\.|\/)(png|jpeg|jpg|gif)$/"
+            />
 
         </h:panelGrid>
         <p:commandButton value="Volver" immediate="true" action="/home?faces-redirect=true" icon="pi pi-arrow-left"/>
