--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -29,19 +29,23 @@
                 <div> <!--Inicio Menu-->
                     <h:form>
                         <p:menubar>
-                            <p:submenu label="Remesas">
+                            <p:submenu label="Remesas" rendered="#{!userLogged.admin}">
                                 <p:menuitem value="Listar" action="/remesa/list-remesa?faces-redirect=true"/>
                                 <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
                             </p:submenu>
-                            <p:submenu label="Agentes">
+                            <p:submenu label="Agentes" rendered="#{userLogged.admin}">
                                 <p:menuitem value="Listar" action="/agente/list-agente?faces-redirect=true"/>
                                 <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
                             </p:submenu>
-                            <p:submenu label="Camiones">
+                            <p:submenu label="Camiones" rendered="#{userLogged.admin}">
                                 <p:menuitem value="Listar" action="/camion/list-camion?faces-redirect=true"/>
                                 <p:menuitem value="Nuevo" action="/camion/add-camion?faces-redirect=true"/>
                             </p:submenu>
-                            <p:submenu label="Empresas">
+                            <p:submenu label="Empresas" rendered="#{userLogged.admin}">
+                                <p:menuitem value="Listar" action="/empresa/list-empresa?faces-redirect=true"/>
+                                <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
+                            </p:submenu>
+                            <p:submenu label="Usuarios" rendered="#{userLogged.admin}"> <!--NO TE OLVIDES-->
                                 <p:menuitem value="Listar" action="/empresa/list-empresa?faces-redirect=true"/>
                                 <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
                             </p:submenu>
