--- a/src/main/webapp/agente/add-agente.xhtml
+++ b/src/main/webapp/agente/add-agente.xhtml
@@ -5,7 +5,6 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<f:view>
     <f:event type="preRenderView" listener="#{agenteController.loadAgentes()}"/>
     <h:head>
         <title>Actualizar Agente - SGR - Remmitance Trucks CR</title>
@@ -14,51 +13,50 @@
     </h:head>
     <h:body>
         <div id="wrapper" style="width: 90%;margin: 0 auto;">
-            <div id="headerPage">
-                <div> <!--Encabezado-->
-                    <p:panelGrid id="header" style="width: 100%;">
-                        <p:row>
-                            <p:column style="width: 70%;margin: 0px auto;border: none;">
-                                <h:graphicImage library="images" name="una.png" style="width: 100px;display: block;margin-left:15px;"/>
-                            </p:column>
-                            <p:column style="width: 30%;border: none;">
-                                <h2 style="display: block;margin-right: 10px;">Sistema de Gestión de Remesas</h2>
-                            </p:column>
-                        </p:row>
-                    </p:panelGrid>
-                </div>
-                <div> <!--Inicio Menu-->
-                    <h:form>
-                        <p:menubar>
-                            <p:submenu label="Remesas">
-                                <p:menuitem value="Listar" action="/remesa/list-remesa?faces-redirect=true"/>
-                                <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Agentes">
-                                <p:menuitem value="Listar" action="/agente/list-agentes?faces-redirect=true"/>
-                                <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Camiones">
-                                <p:menuitem value="Listar" action="/camion/list-camiones?faces-redirect=true"/>
-                                <p:menuitem value="Nuevo" action="/camion/add-camion?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Empresas">
-                                <p:menuitem value="Listar" action="/empresa/list-empresas?faces-redirect=true"/>
-                                <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Informes" rendered="#{userLogged.admin}">
-                                <p:menuitem value="Remesas por Agente" action="/reports/remesas-by-agente?faces-redirect=true"/>
-                                <p:menuitem value="Camiones Utilizados" action="/reports/camiones-utilizados?faces-redirect=true"/>
-                                <p:menuitem value="Empresas por Remesa" action="/reports/empresas-by-remesa?faces-redirect=true"/>
-                            </p:submenu>
+        <div id="headerPage">
+        <div> <!--Encabezado-->
+            <p:panelGrid id="header" style="width: 100%;">
+                <p:row>
+                    <p:column style="width: 70%;margin: 0px auto;border: none;">
+                        <h:graphicImage library="images" name="una.png" style="width: 100px;display: block;margin-left:15px;"/>
+                    </p:column>
+                    <p:column style="width: 30%;border: none;">
+                        <h2 style="display: block;margin-right: 10px;">Sistema de Gestión de Remesas</h2>
+                    </p:column>
+                </p:row>
+            </p:panelGrid>
+        </div> <!-- Fin encabezado -->
+        <div> <!--Inicio Menu-->
+            <h:form>
+                <p:menubar>
+                    <p:submenu label="Remesas">
+                        <p:menuitem value="Listar" action="/remesa/list-remesa?faces-redirect=true"/>
+                        <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
+                    </p:submenu>
+                    <p:submenu label="Agentes">
+                        <p:menuitem value="Listar" action="/agente/list-agentes?faces-redirect=true"/>
+                        <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
+                    </p:submenu>
+                    <p:submenu label="Camiones">
+                        <p:menuitem value="Listar" action="/camion/list-camion?faces-redirect=true"/>
+                        <p:menuitem value="Nuevo" action="/camion/add-camion?faces-redirect=true"/>
+                    </p:submenu>
+                    <p:submenu label="Empresas">
+                        <p:menuitem value="Listar" action="/empresa/list-empresas?faces-redirect=true"/>
+                        <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
+                    </p:submenu>
+                    <p:submenu label="Informes" rendered="#{userLogged.admin}">
+                        <p:menuitem value="Remesas por Agente" action="/reports/remesas-by-agente?faces-redirect=true"/>
+                        <p:menuitem value="Camiones Utilizados" action="/reports/camiones-utilizados?faces-redirect=true"/>
+                        <p:menuitem value="Empresas por Remesa" action="/reports/empresas-by-remesa?faces-redirect=true"/>
+                    </p:submenu>
 
-                            <f:facet name="options">
-                                <p:commandLink value="#{userLogged.username}" action="#{userController.logout()}"/>
-                            </f:facet>
-                        </p:menubar>
-                    </h:form>
-                </div> <!--Fin Menu-->
-            </div>
+                    <f:facet name="options">
+                        <p:commandLink value="#{userLogged.username}" action="#{userController.logout()}"/>
+                    </f:facet>
+                </p:menubar>
+            </h:form>
+        </div> <!--Fin Menu-->
             <div id="contentPage"> <!--Inicia el contenido-->
                 <h4>Actualización de Agente</h4>
                 <h:form id="updateForm" style="width: 80%;margin: 5px auto">
@@ -74,20 +72,22 @@
                             <h:message for="name"/>
                         </div>
                         <div class="p-field p-col-12">
-                            <p:outputLabel value="Teléfono" for="phone"/>
-                            <p:inputText id="phone" value="#{agenteController.newAgente.phone}" required="true" requiredMessage="Campo obligatorio"/>
-                            <h:message for="phone"/>
+                            <p:outputLabel value="Apellidos" for="lastname"/>
+                            <p:inputText id="lastname" value="#{agenteController.newAgente.lastname}" required="true" requiredMessage="Campo obligatorio"/>
+                            <h:message for="lastname"/>
                         </div>
                         <div class="p-field p-col-12">
-                            <p:outputLabel value="Correo Electrónico" for="email"/>
-                            <p:inputText id="email" value="#{agenteController.newAgente.email}" required="true" requiredMessage="Campo obligatorio"/>
-                            <h:message for="email"/>
+                            <p:outputLabel value="Nombre" for="agentType"/>
+                            <p:inputText id="agentType" value="#{agenteController.newAgente.agentType}" required="true" requiredMessage="Campo obligatorio"/>
+                            <h:message for="agentType"/>
+                        </div>
                         </div>
                         <div class="p-field p-col-12">
                             <p:outputLabel value="Fotografía" for="photo"/>
                             <p:fileUpload id="photo" fileUploadListener="#{agenteController.uploadFile}"
                                           mode="simple" auto="true" label="Subir" />
                         </div>
+                </h:form>
                         <p:panelGrid id="btnPanel" style="width: 100%">
                             <p:row>
                                 <p:column style="width: 45%;border: none"/>
@@ -99,13 +99,11 @@
                             </p:row>
                         </p:panelGrid>
                     </div>
-                </h:form>
-            </div> <!--fin del contenido-->
             <div id="footerPage">
                 <hr/>
                 <p>&copy;2024 Universidad Nacional. Todos los derechos reservados</p>
             </div>
         </div>
-    </h:body>
-</f:view>
-</html>
+        </div>
+                </h:body>
+        </html>
