--- a/src/main/webapp/agente/add-agente.xhtml
+++ b/src/main/webapp/agente/add-agente.xhtml
@@ -1,109 +1,45 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- saveAgente.xhtml -->
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-    <f:event type="preRenderView" listener="#{agenteController.loadAgentes()}"/>
-    <h:head>
-        <title>Actualizar Agente - SGR - Remmitance Trucks CR</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-        <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
-    </h:head>
-    <h:body>
-        <div id="wrapper" style="width: 90%;margin: 0 auto;">
-        <div id="headerPage">
-        <div> <!--Encabezado-->
-            <p:panelGrid id="header" style="width: 100%;">
-                <p:row>
-                    <p:column style="width: 70%;margin: 0px auto;border: none;">
-                        <h:graphicImage library="images" name="una.png" style="width: 100px;display: block;margin-left:15px;"/>
-                    </p:column>
-                    <p:column style="width: 30%;border: none;">
-                        <h2 style="display: block;margin-right: 10px;">Sistema de Gestión de Remesas</h2>
-                    </p:column>
-                </p:row>
-            </p:panelGrid>
-        </div> <!-- Fin encabezado -->
-        <div> <!--Inicio Menu-->
-            <h:form>
-                <p:menubar>
-                    <p:submenu label="Remesas">
-                        <p:menuitem value="Listar" action="/remesa/list-remesa?faces-redirect=true"/>
-                        <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
-                    </p:submenu>
-                    <p:submenu label="Agentes">
-                        <p:menuitem value="Listar" action="/agente/list-agentes?faces-redirect=true"/>
-                        <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
-                    </p:submenu>
-                    <p:submenu label="Camiones">
-                        <p:menuitem value="Listar" action="/camion/list-camion?faces-redirect=true"/>
-                        <p:menuitem value="Nuevo" action="/camion/add-camion?faces-redirect=true"/>
-                    </p:submenu>
-                    <p:submenu label="Empresas">
-                        <p:menuitem value="Listar" action="/empresa/list-empresas?faces-redirect=true"/>
-                        <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
-                    </p:submenu>
-                    <p:submenu label="Informes" rendered="#{userLogged.admin}">
-                        <p:menuitem value="Remesas por Agente" action="/reports/remesas-by-agente?faces-redirect=true"/>
-                        <p:menuitem value="Camiones Utilizados" action="/reports/camiones-utilizados?faces-redirect=true"/>
-                        <p:menuitem value="Empresas por Remesa" action="/reports/empresas-by-remesa?faces-redirect=true"/>
-                    </p:submenu>
+<h:head>
+    <title>Guardar Agente</title>
+</h:head>
+<h:body>
+    <h:form id="addForm" enctype="multipart/form-data">
+        <h1>Registrar Nuevo Agente</h1>
 
-                    <f:facet name="options">
-                        <p:commandLink value="#{userLogged.username}" action="#{userController.logout()}"/>
-                    </f:facet>
-                </p:menubar>
-            </h:form>
-        </div> <!--Fin Menu-->
-            <div id="contentPage"> <!--Inicia el contenido-->
-                <h4>Actualización de Agente</h4>
-                <h:form id="updateForm" style="width: 80%;margin: 5px auto">
-                    <p:growl id="msg" life="3000" showDetail="true"/>
-                    <div class="ui-fluid p-formgrid p-grid">
-                        <div class="p-field p-col-12">
-                            <p:outputLabel value="Identificación" for="id"/>
-                            <p:inputText id="id" value="#{agenteController.newAgente.id}" disabled="true"/>
-                        </div>
-                        <div class="p-field p-col-12">
-                            <p:outputLabel value="Nombre" for="name"/>
-                            <p:inputText id="name" value="#{agenteController.newAgente.name}" required="true" requiredMessage="Campo obligatorio"/>
-                            <h:message for="name"/>
-                        </div>
-                        <div class="p-field p-col-12">
-                            <p:outputLabel value="Apellidos" for="lastname"/>
-                            <p:inputText id="lastname" value="#{agenteController.newAgente.lastname}" required="true" requiredMessage="Campo obligatorio"/>
-                            <h:message for="lastname"/>
-                        </div>
-                        <div class="p-field p-col-12">
-                            <p:outputLabel value="Nombre" for="agentType"/>
-                            <p:inputText id="agentType" value="#{agenteController.newAgente.agentType}" required="true" requiredMessage="Campo obligatorio"/>
-                            <h:message for="agentType"/>
-                        </div>
-                        </div>
-                        <div class="p-field p-col-12">
-                            <p:outputLabel value="Fotografía" for="photo"/>
-                            <p:fileUpload id="photo" fileUploadListener="#{agenteController.uploadFile}"
-                                          mode="simple" auto="true" label="Subir" />
-                        </div>
-                </h:form>
-                        <p:panelGrid id="btnPanel" style="width: 100%">
-                            <p:row>
-                                <p:column style="width: 45%;border: none"/>
-                                <p:column style="width: 10%;border: none">
-                                    <p:commandButton value="Guardar" styleClass="ui-button blue-bg"
-                                                     action="#{agenteController.saveAgente()}" update="msg"/>
-                                </p:column>
-                                <p:column style="width: 45%;border: none"/>
-                            </p:row>
-                        </p:panelGrid>
-                    </div>
-            <div id="footerPage">
-                <hr/>
-                <p>&copy;2024 Universidad Nacional. Todos los derechos reservados</p>
-            </div>
-        </div>
-        </div>
-                </h:body>
-        </html>
+        <p:messages autoUpdate="true" />
+
+        <h:panelGrid columns="2" cellpadding="5">
+
+            <h:outputLabel for="id" value="Cedula:" />
+            <p:inputText id="id" value="#{agenteController.agente.id}" required="true" />
+
+            <h:outputLabel for="name" value="Nombre:" />
+            <p:inputText id="name" value="#{agenteController.agente.name}" required="true" />
+
+            <h:outputLabel for="lastname" value="Apellidos:" />
+            <p:inputText id="lastname" value="#{agenteController.agente.lastname}" required="true" />
+
+            <h:outputLabel for="agentType" value="Tipo:" />
+            <p:selectOneMenu id="agentType" value="#{agenteController.agente.agentType}" required="true">
+                <f:selectItem itemLabel="Seleccione tipo" itemValue="" noSelectionOption="true" />
+                <f:selectItem itemLabel="Conductor" itemValue="Conductor" />
+                <f:selectItem itemLabel="Escolta" itemValue="Escolta" />
+            </p:selectOneMenu>
+
+            <h:outputLabel for="photo" value="Foto:" />
+            <p:fileUpload id="photo" mode="simple" listener="#{agenteController.handleUpload}"
+                          fileLimit="1" auto="true" allowTypes="/(\.|\/)(png|jpeg|jpg|gif)$/"
+            />
+
+        </h:panelGrid>
+        <p:commandButton value="Volver" immediate="true" action="/home?faces-redirect=true" icon="pi pi-arrow-left"/>
+        <p:commandButton value="Guardar Agente" action="#{agenteController.saveAgente()}" update="@form" icon="pi pi-save"/>
+
+    </h:form>
+</h:body>
+</html>
