--- a/src/main/webapp/agente/update-agente.xhtml
+++ b/src/main/webapp/agente/update-agente.xhtml
@@ -1,3 +1,4 @@
+<!-- saveCamion.xhtml -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -37,7 +38,7 @@
 
         </h:panelGrid>
         <p:commandButton value="Volver" immediate="true" action="#{agenteController.backList}" icon="pi pi-arrow-left"/>
-        <p:commandButton value="Guardar CamiÃ³n" action="#{agenteController.updateAgente()}" update="@form" icon="pi pi-save"/>
+        <p:commandButton value="Guardar Camión" action="#{agenteController.updateAgente()}" update="@form" icon="pi pi-save"/>
     </h:form>
 </h:body>
 </html>
