--- a/src/main/webapp/empresa/list-empresa.xhtml
+++ b/src/main/webapp/empresa/list-empresa.xhtml
@@ -8,26 +8,51 @@
 </h:head>
 <h:body>
     <h:form>
+
         <h:panelGrid columns="2">
             <h:outputLabel value="Lista de Empresas" for="empresasTable" />
-            <p:commandButton value="Actualizar" action="#{empresaController.loadEmpresas()}" update="empresasTable" />
+            <p:commandButton value="Actualizar" action="#{empresaController.loadEmpresas()}" update="empresasTable" icon="pi pi-refresh"/>
         </h:panelGrid>
+        <p:commandButton value="Volver" immediate="true" action="/home?faces-redirect=true" icon="pi pi-arrow-left"/>
 
-        <p:dataTable id="empresasTable" value="#{empresaController.empresas}" var="empresa" editable="true">
+        <p:dataTable id="empresasTable" value="#{empresaController.empresas}" var="empresaT" striped="true" hover="true">
 
             <p:column headerText="Nombre">
-                <h:outputText value="#{empresa.companyName}" />
+                <h:outputText value="#{empresaT.companyName}" />
             </p:column>
 
-            <p:column headerText="direccion">
-                <h:outputText value="#{empresa.address}" />
+            <p:column headerText="Direccion">
+                <h:outputText value="#{empresaT.address}" />
             </p:column>
 
             <p:column headerText="Contacto">
-                <h:outputText value="#{empresa.contact}" />
+                <h:outputText value="#{empresaT.contact}" />
+            </p:column>
+
+            <p:column headerText="Editar">
+                <p:commandButton value="Editar"
+                                 action="#{empresaController.setEdit(empresaT)}"
+                                 icon="pi pi-user-edit"/>
+            </p:column>
+            <p:column headerText="Acciones">
+                <p:commandButton value="Eliminar"
+                                 action="#{empresaController.deleteEmpresa(empresaT.companyName)}"
+                                 update="empresasTable"
+                                 oncomplete="PF('dlg').hide();"
+                                 icon="pi pi-trash"
+                                 onclick="return confirm('¿Estás seguro de que deseas eliminar esta empresa?');" />
             </p:column>
 
         </p:dataTable>
+
+        <p:dialog header="Confirmación" widgetVar="dlg" modal="true" closable="false">
+            <h:outputText value="¿Estás seguro de que deseas eliminar esta empresa?" />
+            <p:commandButton value="Sí"
+                             action="#{empresaController.deleteEmpresa(empresaT.companyName)}"
+                             update="empresasTable"
+                             oncomplete="PF('dlg').hide();" />
+            <p:commandButton value="No" onclick="PF('dlg').hide();" type="button" />
+        </p:dialog>
     </h:form>
 </h:body>
 </html>
