--- a/src/main/webapp/usuario/add-usuario.xhtml
+++ b/src/main/webapp/usuario/add-usuario.xhtml
@@ -2,26 +2,31 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>Guardar Empresa</title>
+    <title>Guardar Usuario</title>
 </h:head>
 <h:body>
     <h:form>
-        <h1>Registrar Nueva Empresa</h1>
+        <h1>Registrar Nuevo Usuario</h1>
 
         <p:messages autoUpdate="true" />
 
         <h:panelGrid columns="2" cellpadding="5">
 
-            <h:outputLabel for="companyName" value="Nombre:" />
-            <p:inputText id="companyName" value="#{empresaController.empresa.companyName}" required="true" />
+            <h:outputLabel for="userName" value="Nombre de Usuario:" />
+            <p:inputText id="userName" value="#{userController.user.userName}" required="true" />
 
-            <h:outputLabel for="address" value="Direccion:" />
-            <p:inputText id="address" value="#{empresaController.empresa.address}" required="true" />
+            <h:outputLabel for="password" value="Contrasena:" />
+            <p:inputText id="password" value="#{userController.user.password}" required="true" />
 
-            <h:outputLabel for="contact" value="Contacto:" />
-            <p:inputText id="contact" value="#{empresaController.empresa.contact}" required="true" />
+            <h:outputLabel for="admin" value="Privilegios:" />
+            <p:selectOneMenu id="admin" value="#{userController.user.admin}" required="true">
+                <f:selectItem itemLabel="Seleccione tipo" itemValue="" noSelectionOption="true" />
+                <f:selectItem itemLabel="Administrador" itemValue="1" />
+                <f:selectItem itemLabel="Cliente" itemValue="0" />
+            </p:selectOneMenu>
 
         </h:panelGrid>
         <p:commandButton value="Volver" immediate="true" action="/home?faces-redirect=true" icon="pi pi-arrow-left"/>
