--- a/src/main/webapp/usuario/update-usuario.xhtml
+++ b/src/main/webapp/usuario/update-usuario.xhtml
@@ -2,30 +2,35 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>Editar Camión</title>
+    <title>Editar Usuario</title>
 </h:head>
 <h:body>
     <h:form>
-        <h1>Editar Camión</h1>
+        <h1>Editar Usuario</h1>
 
         <p:messages autoUpdate="true" />
 
         <h:panelGrid columns="2" cellpadding="5">
 
-            <h:outputText for="companyName" value="Placa:" />
-            <h:outputText id="companyName" value="#{empresaController.empresa.companyName}"/>
+            <h:outputText for="userName" value="Nombre de Usuario:" />
+            <h:outputText id="userName" value="#{userController.user.userName}"/>
 
-            <h:outputLabel for="address" value="Direccion:" />
-            <p:inputText id="address" value="#{empresaController.empresa.address}" required="true" />
+            <h:outputLabel for="password" value="Contrasena:" />
+            <p:inputText id="password" value="#{userController.user.password}" required="true" />
 
-            <h:outputLabel for="contact" value="Contacto:" />
-            <p:inputText id="contact" value="#{empresaController.empresa.contact}" required="true" />
+            <h:outputLabel for="admin" value="Privilegios:" />
+            <p:selectOneMenu id="admin" value="#{userController.user.admin}" required="true">
+                <f:selectItem itemLabel="Seleccione tipo" itemValue="" noSelectionOption="true" />
+                <f:selectItem itemLabel="Administrador" itemValue="1" />
+                <f:selectItem itemLabel="Cliente" itemValue="0" />
+            </p:selectOneMenu>
 
         </h:panelGrid>
-        <p:commandButton value="Volver" immediate="true" action="#{empresaController.backList}" icon="pi pi-arrow-left"/>
-        <p:commandButton value="Guardar Camión" action="#{empresaController.updateEmpresa()}" update="@form" icon="pi pi-save"/>
+        <p:commandButton value="Volver" immediate="true" action="#{userController.backList}" icon="pi pi-arrow-left"/>
+        <p:commandButton value="Guardar Usuario" action="#{userController.updateUsuario()}" update="@form" icon="pi pi-save"/>
     </h:form>
 </h:body>
 </html>
